[package]
name = "preview"
version = "0.1.0"
edition = "2024"

[profile.deploy]
inherits = "release"
debug = 2
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.fast]
inherits = "dev"
opt-level = 0
debug = 0
incremental = true
codegen-units = 256
lto = false

[dependencies]
braille = { path = "../braille/" }
crossterm = "0.29.0"
glam = "0.32.1"
image = "0.25.10"
